--- a/test.html
+++ b/test.html
@@ -88,7 +88,49 @@
           <p>
             &copy; 2014 cruz design</a>
           </p>
+
+
+
         </div>
+
+        <div class="nh-anim">
+          <div class="wave">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+
+          <div class="beaming">
+            <p class="top"></p>
+            <p class="middle"></p>
+            <p class="bottom"></p>
+          </div>
+
+          <div class="stems">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+
       </div>
     </footer>
   </body>
